# CookieSync

./: .gitignore  LICENSE  Makefile  README.md  ResoBot.py  build.bat  compile.bat  generator.py  main.py  pyproject.toml  requirements.txt  reso.ini  setup.cfg  support.py
client/: handlers.py  manager.py
reso_auto/: ResoBot.py  choiches.py  generator.py  handlers.py  main.py  manager.py  manager_console.py  message_sample.json  reso.ini  settings.py  support.py
reso_auto/tests/: __init__.py  reso.ini  tests.py
resoserver/: README.md  choices.py  cookie_sample.json  handlers.py  install.sh  resoserver.service  server.py  start.py
server/: choices.py  handlers.py  server.py
src/: __init__.py  choiches.py  cookies.py  cookies_sample.json  exceptions.py  handlers.py  main.py  manager.py  manager_console.py  message_sample.json  requirements-dev.txt  requirements.txt  reso.ini  settings.py
support_pinned/: pin_new.py  requirements.txt
tests/: __init__.py  reso.ini  tests.py
