[tool.poetry]
name = "resu-auto-public"
version = "0.1.0"
description = "parallel session service for reso"
authors = ["Victor <vzagulin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.7"
pytelegrambotapi = "4.14.0"
pytest = "7.4.2"
selenium = "4.11.2"
wemake-python-styleguide = "0.17.0"
mypy = "1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
